--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,3 +1,5 @@
+@import "vendor/bourbon/app/assets/stylesheets/bourbon";
+
 html, body {
-  margin: 20px;
+  @include background-image( linear-gradient(to left, #FFF, #F4F5F7) );
 }
