--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,30 @@
+// =============================
+// Vendor
+// =============================
 @import "vendor/bourbon/app/assets/stylesheets/bourbon";
 
-html, body {
-  @include background-image( linear-gradient(to left, #FFF, #F4F5F7) );
-}
+// =============================
+// Dependencies
+// =============================
+@import "dependencies/variables";
+@import "dependencies/helpers";
+
+// =============================
+// Base
+// =============================
+@import "base/typography";
+@import "base/base";
+
+// =============================
+// Components
+// =============================
+@import "components/alerts";
+@import "components/buttons";
+@import "components/code";
+@import "components/forms";
+@import "components/icons";
+@import "components/labels";
+@import "components/loading";
+@import "components/media";
+@import "components/navigation";
+@import "components/toggle";
