--- a/app/styles/dependencies/_variables.scss
+++ b/app/styles/dependencies/_variables.scss
@@ -4,6 +4,7 @@
 
 $blue:          #438eff;
 
+$red_light:     #f22a59;
 $red:           #d81d4e;
 $red_dark:      #770428;
 
@@ -11,7 +12,8 @@ $gray:          #939598;
 $gray_medium:   #7f7f7f;
 $gray_dark:     #414042;
 $gray_darkest:  #262626;
-$gray_light:    #f2f2f2;
+$gray_light:    #d8d8d8;
+$gray_lightest: #f2f2f2;
 
 
 // =============================
