--- a/app/styles/modules/_feed.scss
+++ b/app/styles/modules/_feed.scss
@@ -30,7 +30,7 @@ ul.feed {
         top: 0;
         left: 0;
         border: 2px solid #d81d4e;
-        transition: all 200ms;
+        transition: all 200ms cubic-bezier(0.280, -0.035, 0.000, 1.600);
       }
 
       &:hover {
